k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upsmonitor
spec:
  selector:
    matchLabels:
      app: upsmonitor
  template:
    metadata:
      labels:
        app: upsmonitor
    spec:
      nodeSelector:
        name: biehler2
      containers:
      - name: ups-server
        image: upshift/nut-upsd
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3493
        volumeMounts:
        - mountPath:  /dev/bus/usb/001/001
          name: hid
        securityContext:
          privileged: true
          runAsNonRoot: false
      volumes:
      - name: hid
        hostPath:
          path:  /dev/bus/usb/003/003
