k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upsmonitor-server-service
spec:
  selector:
    app: upsmonitor
  type: ClusterIP
  ports:
  - port: 3493
    targetPort: 3493
