k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upsmonitor-service
spec:
  selector:
    app: upsmonitor-web
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 6543
