k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: upsmonitor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range:  192.168.2.0/24
    nginx.ingress.kubernetes.io/upstream-vhost: "192.168.2.126" # ip of node :-(
spec:
  rules:
  - host: ups.h5b.de
    http:
      paths:
      - path: /
        backend:
          serviceName: upsmonitor-service
          servicePort: 6543
  - host: www.ups.h5b.de
    http:
      paths:
      - path: /
        backend:
          serviceName: upsmonitor-service
          servicePort: 6543
